# rcli

./: .pre-commit-config.yaml  Cargo.toml  README.md  cliff.toml
.github/workflows/: build.yml
src/: main.rs
